remove the deliveries(Actions Manage this sales run.
Standard Sale

Re

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-
+GEMINI_API_KEY=AIzaSyATYinSUzeusfHh_chDTz5yUkuugUGt0GI
 # You can find these in your Firebase project settings.
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAZvvDOuzOuYIDqXSYxelNT8Cl4OmeRE5Y
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=bakery-management-system-24646.firebaseapp.com
